# LOICA

./: .readthedocs.yaml  LICENSE  README.md  README.rst  pyproject.toml  setup.py  test_diff.ipynb  test_diff_stochastic.ipynb  test_diff_stochastic_degr.ipynb  test_no_diff_stochastic.ipynb
.github/ISSUE_TEMPLATE/: feature_request.md  new-contributor.md
.github/workflows/: tests.yml
LOICA/: Classes.py
docs/: conf.py  connection_to_flapjack.rst  connection_to_sbol.rst  getting_started.rst  index.rst  introduction.rst  requirements.txt
docs/source/: conf.py  index.rst
loica/: README.md  __init__.py  assay.py  cell.py  colony.py  consortium.py  geneproduct.py  genetic_network.py  geneticnetwork.py  metabolism.py  operator.py  regulator.py  repressilator.py  repressor.py  sample.py  sample2.py  strain.py  supplement.py  tu.py  tus.py  util.py
loica/impactors/: __init__.py  degrader.py  impactor.py  producer.py
loica/operators/: __init__.py  and_.py  buffer.py  degrader.py  hasty.py  hill1.py  hill2.py  nand.py  nor.py  not_.py  operator.py  or_.py  receiver.py  source.py  sum.py
notebooks/: AND from NOR.ipynb  Band Detect.ipynb  Characterization.ipynb  Characterization_automation.ipynb  Consortia_demo.ipynb  Enzymes_DEMO.ipynb  Gradient Interpretation.ipynb  Kymograph.ipynb  LOICA_DEMO_Operators.ipynb  LOICA_chapter.ipynb  Nor.ipynb  Not.ipynb  Receiver.ipynb  Receiver1.ipynb  Receiver2.ipynb  Ring Stochastic.ipynb  Ring.ipynb  Source.ipynb  Stricker.ipynb  Testing.ipynb  Tigges.ipynb  df_characterization.csv
src/loica/: assay.py  (+5 more)
tests/: test_sbol_export.py
(+25 files in other folders)
